--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,5 +34,9 @@
   version = "1.0.0"
 
 [[constraint]]
-  name = "github.com/stretchr/testify"
-  version = "1.3.0"
+  branch = "master"
+  name = "github.com/poy/onpar"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/poy/onpar/expect"
